--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -170,61 +170,3 @@
 		text-transform: lowercase;
 	}
 }
-
-.home-page main > article {
-	padding-right: $gutter;
-	padding-left: $gutter;
-
-	scroll-snap-align: start;
-
-	// starting at 2nd
-	&:nth-of-type(n + 2) {
-		min-height: 590px;
-
-		background-size: 213px 223px,
-		81px 84px,
-		102px 108px;
-	}
-
-	// even
-	&:nth-of-type(2n) {
-		text-align: right;
-
-		background-position: calc(50% - 86px - #{213px * 0.5}) 185px,
-		calc(50% - 366px - #{81px * 0.5}) 398px,
-		calc(50% - 398px - #{102px * 0.5}) 150px;
-
-		.container > * {
-			margin-right: 0;
-			margin-left: auto;
-		}
-	}
-
-	// starting at 3rd
-	&:nth-of-type(2n+1) {
-		background-position: calc(50% + 96px) 176px,
-		calc(50% + 376px) 384px,
-		calc(50% + 406px) 139px;
-	}
-
-	// second
-	&:nth-of-type(2) {
-		background-image: image('robot__orange--circular.svg'),
-		image('robot__purple--square.svg'),
-		image('robot__yellow--rounded.svg');
-	}
-
-	// third
-	&:nth-of-type(3) {
-		background-image: image('robot__yellow--rounded.svg'),
-		image('robot__orange--circular.svg'),
-		image('robot__purple--square.svg');
-	}
-
-	// forth
-	&:nth-of-type(4) {
-		background-image: image('robot__purple--square.svg'),
-		image('robot__yellow--rounded.svg'),
-		image('robot__orange--circular.svg');
-	}
-}
